--- a/day_7/boilerplate/index.html
+++ b/day_7/boilerplate/index.html
@@ -12,23 +12,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
-    <title>Scorll Animation</title>
+    <title>My Project</title>
   </head>
   <body>
     <div class="container">
-      <h1>Scroll to see what's coming</h1>
-      <div class="box show"><h2>Hey there...</h2></div>
-      <div class="box"><h2>Hey there...</h2></div>
-      <div class="box"><h2>Hey there...</h2></div>
-      <div class="box"><h2>Hey there...</h2></div>
-      <div class="box"><h2>Hey there...</h2></div>
-      <div class="box"><h2>Hey there...</h2></div>
-      <div class="box"><h2>Hey there...</h2></div>
-      <div class="box"><h2>Hey there...</h2></div>
-      <div class="box"><h2>Hey there...</h2></div>
-      <div class="box"><h2>Hey there...</h2></div>
-      <div class="box"><h2>Hey there...</h2></div>
-      <div class="box"><h2>Hey there...</h2></div>
+      <h1>Project Boilerplate</h1>
     </div>
     <script src="./script.js"></script>
   </body>
