--- a/day_7/index.html
+++ b/day_7/index.html
@@ -12,11 +12,18 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
-    <title>My Project</title>
+    <title>Console Landing Page</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Project Boilerplate</h1>
+    <div class="container white">
+      <div class="box" id="ps">
+        <h1>Playstation 5</h1>
+        <button class="white">Buy Now</button>
+      </div>
+      <div class="box" id="x">
+        <h1>Xbox Series X</h1>
+        <button class="white">Buy Now</button>
+      </div>
     </div>
     <script src="./script.js"></script>
   </body>
